--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
             <version>4.13.2</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+    <groupId>com.formdev</groupId>
+    <artifactId>flatlaf</artifactId>
+    <version>2.3</version>
+      </dependency>
 
     </dependencies>
 
