--- a/pom.xml
+++ b/pom.xml
@@ -49,10 +49,11 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-    <groupId>com.formdev</groupId>
-    <artifactId>flatlaf</artifactId>
-    <version>2.3</version>
-      </dependency>
+        <groupId>com.formdev</groupId>
+        <artifactId>flatlaf</artifactId>
+        <version>3.4.1</version>
+        <scope>runtime</scope>
+        </dependency>
 
     </dependencies>
 
